# materialize

./: Cargo.toml  deny.toml
src/avro-derive/src/: lib.rs
src/avro/src/: decode.rs  lib.rs  schema.rs
